--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -20,8 +20,10 @@ jobs:
     - name: Terraform Plan
       run: terraform plan -out=tfplan
 
-    - name: Terraform Apply
-      run: terraform apply -auto-approve
+#   - name: Terraform Apply
+#      run: terraform apply -auto-approve
+    - name: terraform destroy
+      run: terraform destroy
     env:
       AWS_ACCESS_KEY_ID: AKIASRM3QENBI64GP4UK
       AWS_SECRET_ACCESS_KEY: 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
