--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,7 +23,7 @@ jobs:
 #   - name: Terraform Apply
 #      run: terraform apply -auto-approve
     - name: terraform destroy
-      run: terraform destroy
+      run: terraform destroy -auto-approve
     env:
       AWS_ACCESS_KEY_ID: AKIASRM3QENBI64GP4UK
       AWS_SECRET_ACCESS_KEY: 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
