--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -17,8 +17,8 @@ jobs:
     - name: Terraform Init
       run: terraform init
 
-    - name: Terraform Plan
-      run: terraform plan -out=tfplan
+#    - name: Terraform Plan
+#      run: terraform plan -out=tfplan
 
 #   - name: Terraform Apply
 #      run: terraform apply -auto-approve
