--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,9 @@ jobs:
 
     - name: Terraform Init
       run: terraform init
-
+    - name: Terraform Plan
+      run: terraform plan -out=tfplan    
+    
     - name: Terraform Destroy
       run: terraform destroy -auto-approve
     env:
