--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
 
     - name: Terraform Init
       run: terraform init
+    - name: Terraform refresh
+      run: terraform refresh
     - name: Terraform Plan
       run: terraform plan -out=tfplan    
     
