--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Terraform refresh
       run: terraform refresh
     - name: Terraform Plan
-      run: terraform plan -out=tfplan    
+      run: terraform plan    
     
     - name: Terraform Destroy
       run: terraform destroy -auto-approve
