--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
       with:
         terraform_version: <TERRAFORM_VERSION>  # Replace with the desired version of Terraform
 
+    - name: Terraform Init
+      run: terraform init
        
     
     - name: Terraform Destroy
