--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,23 @@
-name: github action with terraform
+name: Terraform Destroy
+
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
+
 jobs:
-  build:
-
+  terraform:
     runs-on: ubuntu-latest
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Terraform
-      uses: hashicorp/setup-terraform@v1
-      with:
-        terraform_version: <TERRAFORM_VERSION>  # Replace with the desired version of Terraform
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v1
 
-    - name: Terraform Init
-      run: terraform init
-    - name: terraform import
-      run: terraform import
-       
-    
-    - name: Terraform Destroy
-      run: terraform destroy -auto-approve
-    env:
-      AWS_ACCESS_KEY_ID: AKIASRM3QENBI64GP4UK
-      AWS_SECRET_ACCESS_KEY: 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
+      - name: Terraform Init
+        run: terraform init
+
+      - name: Terraform Destroy
+        run: terraform destroy -auto-approve
