--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,8 +23,8 @@ jobs:
     - name: Terraform Apply
       run: terraform apply -auto-approve
       
-    - name: terraform destroy
-      run: terraform destroy -auto-approve
+#    - name: terraform destroy
+  #    run: terraform destroy -auto-approve
 
       
     env:
