--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -20,11 +20,11 @@ jobs:
     - name: Terraform Plan
       run: terraform plan -out=tfplan
 
-    - name: Terraform Apply
-      run: terraform apply -auto-approve
+ #   - name: Terraform Apply
+ #     run: terraform apply -auto-approve
       
-#    - name: terraform destroy
-  #    run: terraform destroy -auto-approve
+    - name: terraform destroy
+      run: terraform destroy -auto-approve
 
       
     env:
